[tool.poetry]
name = "MERLIn"
version = "0.1.0"
description = "The Module Extensible Reinforcement Learning Interface"
authors = ["Ben Felder <benjamin.felder@iubh.de>"]
license = "MIT"
packages = [
    { include = "app" },
    { include = "analysis" }
]

    [tool.poetry.dependencies]
    python = ">3.11.0,<3.12"
    gym = {extras = ["atari"], version = "*"}
    autorom = {extras = ["accept-rom-license"], version = "*"}
    opencv-python = "*"
    triton = "*"
    torch = "2.0.0"  # update once solved: https://github.com/pytorch/pytorch/issues/100974
    lightning = "2.0.1"
    moviepy = "^1.0.3"
    loguru = "^0.7.0"
    seaborn = "^0.12.2"
    scipy = "^1.10.1"
    fastapi = ">=0.80" # remove once solved: https://github.com/Lightning-AI/lightning/issues/17106
    pyyaml = "^6.0.1"
    statsmodels = "^0.14.0"

    [tool.poetry.group.dev.dependencies]
    black = "*"
    ruff = "*"
    mypy = "*"
    deptry = "*"
    vulture = "*"
    pytest = "*"
    absolufy-imports = "*"
    ipykernel = "*"

    [tool.poetry.group.profiling.dependencies]
    scalene = "^1.5.21.4"

    [tool.poetry.scripts]
    train = "app.__main__:train"
    analyze = "analysis.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
line-length = 88
target_version = ["py311"]

[tool.ruff]
# https://pypi.org/project/ruff/
line-length = 88
target-version = "py311"
ignore = ["E402","F841","F401"]
src = ["app"]

    [tool.ruff.isort]
    # https://beta.ruff.rs/docs/settings/#isort
    # https://beta.ruff.rs/docs/faq/#how-does-ruffs-import-sorting-compare-to-isort
    known-local-folder = ["app"]
    known-third-party = ["app"]

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
# disallow_untyped_calls = true
# disallow_untyped_decorators = true
# disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
ignore_missing_imports = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
